--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - run:
           name: Test
          # command: mvn test
-          command: mvn test -Dtest="testGoogle"
+          command: mvn test -Dtest="GoogleTest"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
